--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "dependencies": {
-    "esbuild": "^0.25.4",
-    "mime": "^4.0.7"
+  "name": "tony-cli",
+  "version": "1.0.0",
+  "type": "module",
+  "bin": {
+    "tony": "./bin/tony.js"
+  },
+  "scripts": {
+    "dev": "node bin/tony.js --watch"
   }
 }
